custom-resources/istio/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: httpbin
spec:
  mtls:
    # mode: PERMISSIVE
    mode: STRICT
