custom-resources/istio/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress-gtw
  labels:
    app: istio-ingressgateway
  # annotations: 
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: '*.ky-rafaels.com'
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-tls
    allowedRoutes:
      namespaces:
        from: All
